welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:12: error: ')' expected but 'return' found.
  return res
  ^